# MailGUI233

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html  ui-guidelines.md
electron/: main.ts  preload.ts  tsconfig.json
scripts/: mailgui233.ps1  mailgui233.sh  package-size.mjs
src/: App.tsx  i18n.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AccountSetupModal.tsx  ChannelPanel.tsx  Composer.tsx  LogoMark.tsx  MessageList.tsx  MessageReader.tsx  SchedulePanel.tsx  SettingsPanel.tsx  ShaderBackdrop.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TopBar.tsx
src/data/: mail.ts
src/lib/: cloudSyncStrategies.ts  displayNames.ts  mailActions.ts
tests/e2e/: mailgui.visual.spec.ts
