[package]
name = "mailgui233"
version = "0.1.3"
description = "Small cross-platform desktop mail GUI"
authors = ["neko233-com"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
